--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="How to Update Magellan Handheld GPS? A Complete Guide">
+  <title>How to Update Magellan Handheld GPS?</title>
   <meta name="description" content="A complete 1200-word guide to Magellan Handheld GPS devices, features, uses, and models.">
   <meta name="keywords" content="Magellan GPS, magellan handheld GPS, magellan gps navigation, magellan gps handheld gps, outdoor navigation, GPS tracking">
   <meta name="author" content="OpenAI">
-  <title>Magellan Handheld GPS 🧭 | Full Guide for Outdoor Enthusiasts</title>
+  <meta name="google-site-verification" content="uvS1BNfY6-y37VsoABXzNxmDr_R5fJvRxoP_51toXPc" />
+  <meta name="msvalidate.01" content="B39742FA329BD6166A2DD3035563B540" />
   <style>
     body {
       margin: 0;
